--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-
-setuptools
-wheel
 flask>=3.0.0
-opencv-python-headless==4.11.0.86
-mediapipe==0.10.21
+opencv-python
+mediapipe>=0.10.9
 numpy
 pandas
 matplotlib
-gunicorn==20.1.0
